Added local gitignore alias

--- a/git/gitconfig.symlink.example
+++ b/git/gitconfig.symlink.example
@@ -14,6 +14,9 @@
         wtf     = !$ZSH/bin/git-wtf
         rank-contributors = !$ZSH/bin/git-rank-contributors
         count   = !git shortlog -sn
+	ignore = update-index --assume-unchanged
+	unignore = update-index --no-assume-unchanged
+	ignored = !git ls-files -v | grep "^[[:lower:]]"
 [color]
         diff = auto
         status = auto
