--- a/git/gitconfig.symlink.example
+++ b/git/gitconfig.symlink.example
@@ -10,9 +10,9 @@
         helper = GIT_CREDENTIAL_HELPER
 [alias]
         co = checkout
-        promote = !$ZSH/bin/git-promote
-        wtf     = !$ZSH/bin/git-wtf
-        rank-contributors = !$ZSH/bin/git-rank-contributors
+        promote = !$DOT/bin/git-promote
+        wtf     = !$DOT/bin/git-wtf
+        rank-contributors = !$DOT/bin/git-rank-contributors
         count   = !git shortlog -sn
 	ignore = update-index --assume-unchanged
 	unignore = update-index --no-assume-unchanged
