added some extra aliases, with credits to @csswizardry

--- a/git/gitconfig.symlink.example
+++ b/git/gitconfig.symlink.example
@@ -16,7 +16,15 @@
         count   = !git shortlog -sn
 	ignore = update-index --assume-unchanged
 	unignore = update-index --no-assume-unchanged
-	ignored = !git ls-files -v | grep "^[[:lower:]]"
+	ignored = !git ls-files -v | grep "^[[:lower:]]
+	# See which commits are on the remote that aren’t on your local branch
+	upstream = "! git fetch && git log --oneline --no-merges ..origin/$(git rev-parse --abbrev-ref HEAD)"
+	# Show detailed logs
+	graph = log --graph --decorate --stat --date=iso --all
+	# See which commits are on your local branch that aren’t on the remote
+	local = "! git log --oneline --no-merges origin/$(git rev-parse --abbrev-ref HEAD).."
+	# Set upstream tracking much faster
+	publish = "! git push -u origin $(git rev-parse --abbrev-ref HEAD)"
 [color]
         diff = auto
         status = auto
